--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "cohort-pipeline",
+  "name": "my-webpack-project",
   "version": "1.0.0",
-  "description": "Build pipeline from the SB Exploring Cohort",
+  "description": "My webpack project",
   "main": "index.js",
   "scripts": {
     "start": "NODE_PATH=./build node build/index.js",
-    "build": "tsc -p .",
+    "build": "webpack --mode=production --node-env=production",
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -33,12 +37,31 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.18",
+    "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "@webpack-cli/generators": "^2.4.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^6.6.0",
+    "declaration-bundler-webpack-plugin": "^1.0.3",
     "eslint": "^8.9.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.3",
     "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
+    "sass": "^1.49.8",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
+    "wepack-cli": "0.0.1-security",
+    "workbox-webpack-plugin": "^6.4.2"
   },
   "dependencies": {
     "express": "^4.17.2"
